# Water-Droplet-Segmentation

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-template-check.yml  release.yml
Nasa_Backend/: .gitignore  frontend_nasa13_apiV2.py  per_frame_xlsx_schema.md  pyproject.toml  requirements.txt  test_gpu_mask_equivalence.py  test_output_modes.py  test_sse_timeout.py  test_summary_avg_columns.py  tracking.py
Nasa_Backend/nasa_backend/: __init__.py  __main__.py  charts.py  distribution.py  masks.py  metrics.py  model.py  pipeline.py  serialization.py
Nasa_Backend/nasa_backend/api/: __init__.py  routes.py  tasks.py
Nasa_Backend/tests/: conftest.py
Nasa_Backend/tests/golden/: record_goldens.py  test_golden_master.py
Nasa_Backend/tests/golden/expected/: basic_noum.json  basic_um.json
Nasa_Backend/tests/unit/: test_api.py  test_charts.py  test_distribution.py  test_import.py  test_masks.py  test_metrics.py  test_model.py  test_output_modes.py  test_package.py  test_pipeline.py  test_serialization.py  test_sse.py  test_webui.py
backend/: .gitignore  per_frame_xlsx_schema.md  pyproject.toml  requirements.txt
backend/droplet_backend/: __init__.py  __main__.py  charts.py  config.py  distribution.py  excel.py  masks.py  metrics.py  model.py  pipeline.py  serialization.py
backend/droplet_backend/api/: __init__.py  routes.py  tasks.py
backend/tests/: conftest.py
backend/tests/fixtures/tracking/: expected_tracking_log.json  synthetic_detections.json
backend/tests/golden/: record_goldens.py
backend/tests/golden/expected/: full_um.json
backend/tests/unit/: test_api.py  test_charts.py  test_distribution.py  test_import.py  test_masks.py  test_metrics.py  test_model.py  test_output_modes.py  test_package.py  test_pipeline.py  test_serialization.py  test_sse.py  test_tracking.py  test_webui.py
backend/tracking/: __init__.py  __main__.py  analyze.py  config.py  detect.py  geometry.py  io.py  matching.py  plots.py  render.py  track.py  tracks.py
deploy/: .env.example  docker-compose.yml  update.sh  validate.sh
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/modal/: AppModal.js
frontend/src/components/noclosemodal/: NoCloseModal.js
nasa-frontend/src/: App.js
nasa-frontend/src/utils/: chartsUtils.js  dynamicSummary.js
(+13 files in other folders)
